<resources>
    <string name="app_name">PID app</string>
    <string name="title_home">Home</string>
    <string name="title_pid">PID</string>
    <string name="title_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Kp">Kp</string>
    <string name="Kd">Kd</string>
    <string name="Ki">Ki</string>
    <string name="MaxSpeed">Max speed</string>
    <string name="default_speed">120</string>
    <string name="default_Ki">0.00</string>
    <string name="default_Kd">0.00</string>
    <string name="default_Kp">0.00</string>
    <string name="btnLoad">Load</string>
    <string name="tbnSave">Save</string>
    <string name="txtDevices">Devices:</string>
</resources>